--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -20,7 +20,7 @@
                                         <h5 class="mb-1">{{ article.title }}</h5>
                                         <small>{{ article.created_at.strftime('%Y-%m-%d') }}</small>
                                     </div>
-                                    <p class="mb-1">{{ article.content[:100] }}...</p>
+                                    <p class="mb-1">{{ (article.content.split('<img')[0] or article.content)[:100] | striptags }}...</p>
                                     <div class="d-flex justify-content-between align-items-center">
                                         <small class="category-badge">{{ article.category }}</small>
                                         <small>作者: {{ article.author.username }}</small>
