--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
                                 <span>作者: {{ article.author.username }}</span> | 
                                 <span>发布时间: {{ article.created_at.strftime('%Y-%m-%d') }}</span>
                             </div>
-                            <p>{{ article.content[:200] }}{% if article.content|length > 200 %}...{% endif %}</p>
+                            <p>{{ article.content[:200]|striptags }}{% if article.content|length > 200 %}...{% endif %}</p>
                             <a href="{{ url_for('article', article_id=article.id) }}" class="btn btn-sm btn-outline-primary">阅读全文</a>
                         </div>
                         {% if not loop.last %}<hr>{% endif %}
